apps/gogs/deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gogs
  template:
    metadata:
      labels:
        name: gogs
    spec:
      containers:
        - image: gogs/gogs
          name: gogs
          volumeMounts:
            - name: gogs-share
              mountPath: /data
      volumes:
        - name: gogs-share
          persistentVolumeClaim:
            claimName: gogs-share
